# rplot-rs

./: Cargo.toml  README.md  build.rs
src/: chart_data.rs  client.rs  figure.rs  lib.rs
