[package]
name = "rplotlib"
version = "0.1.0"
edition = "2021"
description = "Used to plot during the test phase"
license = "MIT"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
lazy_static = "1.4"
futures = "0.3.25"

[build-dependencies]
tonic-build = "0.8"
log = "0.4"
